@@ -27,10 +27,10 @@ AC_CONFIG_HEADERS([config.h])
 # versions
 #
 GWENHYWFAR_VERSION_MAJOR=2
-GWENHYWFAR_VERSION_MINOR=3
-GWENHYWFAR_VERSION_PATCHLEVEL=1
+GWENHYWFAR_VERSION_MINOR=4
+GWENHYWFAR_VERSION_PATCHLEVEL=0
 dnl "stable", "rcX", "betaX", "cvs"
-GWENHYWFAR_VERSION_TAG="svn"
+GWENHYWFAR_VERSION_TAG="stable"
 
 
 
@@ -68,9 +68,9 @@ OHBCI_VERSION_STRING="0.1.0"
 #
 # SO version for Gwenhywfar
 #
-GWENHYWFAR_SO_CURRENT="44"
-GWENHYWFAR_SO_AGE="6"
-GWENHYWFAR_SO_REVISION="1"
+GWENHYWFAR_SO_CURRENT="45"
+GWENHYWFAR_SO_AGE="7"
+GWENHYWFAR_SO_REVISION="0"
 GWENHYWFAR_SO_EFFECTIVE="`echo \$(($GWENHYWFAR_SO_CURRENT-$GWENHYWFAR_SO_AGE))`"
 
 
