@@ -15,7 +15,7 @@
 %endif
 %if %is_fedora
 %define dist fedora
-%define disttag rhfc
+%define disttag fc
 %endif
 
 %define distver %(release="`rpm -q --queryformat='%{VERSION}' %{dist}-release 2>/dev/null`" ; if test $? != 0 ; then release="" ; fi ; echo "$release")
@@ -30,7 +30,7 @@ License: LGPL
 Packager: Martin Preuss <martin@libchipcard.de>
 URL: http://sourceforge.net/projects/gwenhywfar
 BuildRoot: %{_tmppath}/%{name}-%{version}-root
-BuildRequires: openssl-devel ncurses-devel gettext
+BuildRequires: openssl-devel gettext
 Prereq: /sbin/ldconfig
 
 %description
